k8s/base/services/media/gameyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gameyfin
  namespace: media
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: webui
  selector:
    app: gameyfin
